--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
-        <!--Nav-->
+        <!--NAV-->
         <nav>
             <!--Logo Personal-->
             <img src = "Images/logo_glr_blue.png" alt = "Personal Logo" width = "40" height = "40">
 
             <!--Botones nav-->
-            <div class = "d-btn-nav">
-                <button id = "btn-nav">.about( )</button>
-                <button id = "btn-nav">.skills( )</button>
-                <button id = "btn-nav">.projects( )</button>
-                <button id = "btn-nav">.contact( )</button>
+            <div class = "btn-nav">
+                <button>.skills( )</button>
+                <button>.projects( )</button>
+                <button>.contact( )</button>
             </div>
         </nav>
 
+        <!--PORTADA-->
         <div class = "portada">
             <section class = "hi">
                 <p id = "hi1">Hi,</p>
@@ -36,31 +36,69 @@
             </section>
     
             <aside class = "social">
-                <img id = "logo" src = "Images/git_logo.png" alt = "Logo GitHub" width = "30" height = "30">
+                <a href = "https://github.com/goloro"><img id = "logo" src = "Images/github_logo.png" alt = "Logo GitHub" width = "30" height = "30"></a>
                 <br>
-                <img id = "logo" src = "Images/linkedin_logo.png" alt = "Logo Linkedin" width = "30" height = "30">
+                <a href = "https://www.linkedin.com/in/gonzalo-lópez-rodríguez-b919101ba/"><img id = "logo" src = "Images/linkedin_logo.png" alt = "Logo Linkedin" width = "30" height = "30"></a>
                 <br>
                 <img id = "logo" src = "Images/email_logo.png" alt = "Logo Email" width = "30" height = "25">
             </aside>
         </div>
 
-        <div class = "content">
-            <p id = "titulo">.about( )</p>
+        <!--ABOUT-->
+        <div class = "about">
             <p id = "txt">I'm Web Developer located in Madrid. I love creating good, dynamic and intuitive user experiences.</p>
             <p id = "txt">I'm highly motivated and I love researching and learning all about web applications.</p>
         </div>
 
-        <div class = "content">
+        <!--SKILLS-->
+        <div class = "skills">
             <p id="titulo">.skills( )</p>
-            <table class = "skills">
+            <table class = "table-skills">
                 <tr>
                     <th><img id = "logo" src = "Images/js_logo.png" alt = "Logo Javascript" width = "100" height = "100"></th>
-                    <th><img id = "logo" src = "Images/html_logo.png" alt = "Logo HTML" width = "100" height = "100"></th>
-                    <th><img id = "logo" src = "Images/css_logo.png" alt = "Logo CSS" width = "100" height = "100"></th>
+                    <th><img id = "logo" src = "Images/html_logo.png" alt = "Logo HTML" width = "90" height = "100"></th>
+                    <th><img id = "logo" src = "Images/css_logo.png" alt = "Logo CSS" width = "90" height = "100"></th>
                 </tr>
                 <tr>
                     <th><img id = "logo" src = "Images/java_logo.png" alt = "Logo Java" width = "100" height = "100"></th>
-                    <th><img id = "logo" src = "Images/ajax_logo.png" alt = "Logo AJAX" width = "100" height = "100"></th>
+                    <th><img id = "logo" src = "Images/ajax_logo.png" alt = "Logo AJAX" width = "90" height = "100"></th>
+                    <th><img id = "logo" src = "Images/git_logo.png" alt = "Logo Git" width = "100" height = "100"></th>
+                </tr>
+            </table>
+        </div>
+
+        <!--PROJECTS-->
+        <div class = "projects">
+            <p id="titulo">.projects( )</p>
+            <table class = "table-projects">
+                <tr>
+                    <th>
+                        <div class = "porjects-content">
+                            <img src = "Images/folder.png" alt = "Folder" width = "25" height = "25">
+                            <p id = "projects-t">To Do List</p>
+                            <p id = "projects-descript">Simple ToDoList with Local Storage</p>
+                            <p id = "projects-leng">JS    HTML    CSS</p>
+                            <img id = "prjects-web" src = "Images/Webs/todolist.png" alt = "ToDoList Web" width = "100" height = "100">
+                            <a href = 'https://goloro.github.io/ToDoList/'>View Code</a>
+                        </div>
+                    </th>
+                    <th>
+                        <div class = "porjects-content">
+                            <img src = "Images/folder.png" alt = "Folder" width = "25" height = "25">
+                        </div>
+                    </th>
+                </tr>
+                <tr>
+                    <th>
+                        <div class = "porjects-content">
+                            <img src = "Images/folder.png" alt = "Folder" width = "25" height = "25">
+                        </div>
+                    </th>
+                    <th>
+                        <div class = "porjects-content">
+                            <img src = "Images/folder.png" alt = "Folder" width = "25" height = "25">
+                        </div>
+                    </th>
                 </tr>
             </table>
         </div>
