--- a/index.html
+++ b/index.html
@@ -53,54 +53,39 @@
         <!--SKILLS-->
         <div class = "skills">
             <p id="titulo">.skills( )</p>
-            <table class = "table-skills">
-                <tr>
-                    <th><img id = "logo" src = "Images/js_logo.png" alt = "Logo Javascript" width = "100" height = "100"></th>
-                    <th><img id = "logo" src = "Images/html_logo.png" alt = "Logo HTML" width = "90" height = "100"></th>
-                    <th><img id = "logo" src = "Images/css_logo.png" alt = "Logo CSS" width = "90" height = "100"></th>
-                </tr>
-                <tr>
-                    <th><img id = "logo" src = "Images/java_logo.png" alt = "Logo Java" width = "100" height = "100"></th>
-                    <th><img id = "logo" src = "Images/ajax_logo.png" alt = "Logo AJAX" width = "90" height = "100"></th>
-                    <th><img id = "logo" src = "Images/git_logo.png" alt = "Logo Git" width = "100" height = "100"></th>
-                </tr>
-            </table>
+            <div class="skills-content">
+                <div class="skills-item">
+                    <img id = "logo" src = "Images/js_logo.png" alt = "Logo Javascript" width = "100" height = "100">
+                </div>
+                <div class="skills-item">
+                    <img id = "logo" src = "Images/html_logo.png" alt = "Logo HTML" width = "90" height = "100">
+                </div>
+                <div class="skills-item">
+                    <img id = "logo" src = "Images/css_logo.png" alt = "Logo CSS" width = "90" height = "100">
+                </div>
+                <div class="skills-item">
+                    <img id = "logo" src = "Images/java_logo.png" alt = "Logo Java" width = "100" height = "100">
+                </div>
+                <div class="skills-item">
+                    <img id = "logo" src = "Images/ajax_logo.png" alt = "Logo AJAX" width = "90" height = "100">
+                </div>
+                <div class="skills-item">
+                    <img id = "logo" src = "Images/git_logo.png" alt = "Logo Git" width = "100" height = "100">
+                </div>
+            </div>
         </div>
 
         <!--PROJECTS-->
         <div class = "projects">
             <p id="titulo">.projects( )</p>
-            <table class = "table-projects">
-                <tr>
-                    <th>
-                        <div class = "porjects-content">
-                            <img src = "Images/folder.png" alt = "Folder" width = "25" height = "25">
-                            <p id = "projects-t">To Do List</p>
-                            <p id = "projects-descript">Simple ToDoList with Local Storage</p>
-                            <p id = "projects-leng">JS    HTML    CSS</p>
-                            <img id = "prjects-web" src = "Images/Webs/todolist.png" alt = "ToDoList Web" width = "100" height = "100">
-                            <a href = 'https://goloro.github.io/ToDoList/'>View Code</a>
-                        </div>
-                    </th>
-                    <th>
-                        <div class = "porjects-content">
-                            <img src = "Images/folder.png" alt = "Folder" width = "25" height = "25">
-                        </div>
-                    </th>
-                </tr>
-                <tr>
-                    <th>
-                        <div class = "porjects-content">
-                            <img src = "Images/folder.png" alt = "Folder" width = "25" height = "25">
-                        </div>
-                    </th>
-                    <th>
-                        <div class = "porjects-content">
-                            <img src = "Images/folder.png" alt = "Folder" width = "25" height = "25">
-                        </div>
-                    </th>
-                </tr>
-            </table>
+            <div class = "grid-container">
+                <div class="grid-item">
+                    
+                </div>
+                <div class="grid-item">2</div>
+                <div class="grid-item">3</div>
+                <div class="grid-item">4</div>
+            </div>
         </div>
     </body>
 </html>
