--- a/index.html
+++ b/index.html
@@ -78,13 +78,15 @@
         <!--PROJECTS-->
         <div class = "projects">
             <p id="titulo">.projects( )</p>
-            <div class = "grid-container">
-                <div class="grid-item">
-                    
+            <div class = "projects-content">
+                <div class="projects-item">
+                    <div class="grid-item">
+                        <img id = "logo" src = "Images/folder.png" alt = "Folder" width = "20" height = "20">
+                    </div>
                 </div>
-                <div class="grid-item">2</div>
-                <div class="grid-item">3</div>
-                <div class="grid-item">4</div>
+                <div class="projects-item">2</div>
+                <div class="projects-item">3</div>
+                <div class="projects-item">4</div>
             </div>
         </div>
     </body>
