--- a/index.html
+++ b/index.html
@@ -80,13 +80,85 @@
             <p id="titulo">.projects( )</p>
             <div class = "projects-content">
                 <div class="projects-item">
-                    <div class="grid-item">
-                        <img id = "logo" src = "Images/folder.png" alt = "Folder" width = "20" height = "20">
+                    <div class="item1"> <!--HEADER-->
+                        <img id = "logo" src = "Images/folder.png" alt = "Folder" width = "30" height = "30">
+                    </div>
+                    <div class="item2">
+                        <p>TO DO LIST</p>
+                    </div>
+                    <div class="item3">
+                        <p>Simple to do list with local storage</p>
+                    </div>
+                    <div class="item4">
+                        <img id = "web" src = "Images/Webs/todolist.png" alt = "WebToDoList" width = "150" height = "100">
+                    </div>
+                    <div class="item5">
+                        <p>JavaScript 41% | CSS 34% | HTML 25%</p>
+                    </div>
+                    <div class="item6">
+                        <a href = "https://github.com/goloro/ToDoList">VIEW CODE</a>
                     </div>
                 </div>
-                <div class="projects-item">2</div>
-                <div class="projects-item">3</div>
-                <div class="projects-item">4</div>
+                <div class="projects-item">
+                    <div class="item1"> <!--HEADER-->
+                        <img id = "logo" src = "Images/folder.png" alt = "Folder" width = "30" height = "30">
+                    </div>
+                    <div class="item2">
+                        <p>API CONSULTS</p>
+                    </div>
+                    <div class="item3">
+                        <p>Simple to do list with local storage</p>
+                    </div>
+                    <div class="item4">
+                        <img id = "web" src = "Images/Webs/todolist.png" alt = "WebToDoList" width = "150" height = "100">
+                    </div>
+                    <div class="item5">
+                        <p>JavaScript 41% | CSS 34% | HTML 25%</p>
+                    </div>
+                    <div class="item6">
+                        <a href = "https://github.com/goloro/ToDoList">VIEW CODE</a>
+                    </div>
+                </div>
+                <div class="projects-item">
+                    <div class="item1"> <!--HEADER-->
+                        <img id = "logo" src = "Images/folder.png" alt = "Folder" width = "30" height = "30">
+                    </div>
+                    <div class="item2">
+                        <p>API CONSULTS</p>
+                    </div>
+                    <div class="item3">
+                        <p>Simple to do list with local storage</p>
+                    </div>
+                    <div class="item4">
+                        <img id = "web" src = "Images/Webs/todolist.png" alt = "WebToDoList" width = "150" height = "100">
+                    </div>
+                    <div class="item5">
+                        <p>JavaScript 41% | CSS 34% | HTML 25%</p>
+                    </div>
+                    <div class="item6">
+                        <a href = "https://github.com/goloro/ToDoList">VIEW CODE</a>
+                    </div>
+                </div>
+                <div class="projects-item">
+                    <div class="item1"> <!--HEADER-->
+                        <img id = "logo" src = "Images/folder.png" alt = "Folder" width = "30" height = "30">
+                    </div>
+                    <div class="item2">
+                        <p>API CONSULTS</p>
+                    </div>
+                    <div class="item3">
+                        <p>Simple to do list with local storage</p>
+                    </div>
+                    <div class="item4">
+                        <img id = "web" src = "Images/Webs/todolist.png" alt = "WebToDoList" width = "150" height = "100">
+                    </div>
+                    <div class="item5">
+                        <p>JavaScript 41% | CSS 34% | HTML 25%</p>
+                    </div>
+                    <div class="item6">
+                        <a href = "https://github.com/goloro/ToDoList">VIEW CODE</a>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
