--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@900&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@500&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
     </head>
     <body>
         <!--NAV-->
@@ -36,9 +38,9 @@
             </section>
     
             <aside class = "social">
-                <a href = "https://github.com/goloro"><img id = "logo" src = "Images/github_logo.png" alt = "Logo GitHub" width = "30" height = "30"></a>
+                <a target="_blank" href="https://github.com/goloro"><img id = "logo" src = "Images/github_logo.png" alt = "Logo GitHub" width = "30" height = "30"></a>
                 <br>
-                <a href = "https://www.linkedin.com/in/gonzalo-lópez-rodríguez-b919101ba/"><img id = "logo" src = "Images/linkedin_logo.png" alt = "Logo Linkedin" width = "30" height = "30"></a>
+                <a target="_blank" href="https://www.linkedin.com/in/gonzalo-lópez-rodríguez-b919101ba/"><img id = "logo" src = "Images/linkedin_logo.png" alt = "Logo Linkedin" width = "30" height = "30"></a>
                 <br>
                 <img id = "logo" src = "Images/email_logo.png" alt = "Logo Email" width = "30" height = "25">
             </aside>
@@ -96,7 +98,7 @@
                         <p>JavaScript 41% | CSS 34% | HTML 25%</p>
                     </div>
                     <div class="item6">
-                        <a href = "https://github.com/goloro/ToDoList">VIEW CODE</a>
+                        <a id="projects-code" target="_blank" href = "https://github.com/goloro/ToDoList">VIEW CODE</a>
                     </div>
                 </div>
                 <div class="projects-item">
@@ -116,50 +118,15 @@
                         <p>JavaScript 41% | CSS 34% | HTML 25%</p>
                     </div>
                     <div class="item6">
-                        <a href = "https://github.com/goloro/ToDoList">VIEW CODE</a>
-                    </div>
-                </div>
-                <div class="projects-item">
-                    <div class="item1"> <!--HEADER-->
-                        <img id = "logo" src = "Images/folder.png" alt = "Folder" width = "30" height = "30">
-                    </div>
-                    <div class="item2">
-                        <p>API CONSULTS</p>
-                    </div>
-                    <div class="item3">
-                        <p>Simple to do list with local storage</p>
-                    </div>
-                    <div class="item4">
-                        <img id = "web" src = "Images/Webs/todolist.png" alt = "WebToDoList" width = "150" height = "100">
-                    </div>
-                    <div class="item5">
-                        <p>JavaScript 41% | CSS 34% | HTML 25%</p>
-                    </div>
-                    <div class="item6">
-                        <a href = "https://github.com/goloro/ToDoList">VIEW CODE</a>
-                    </div>
-                </div>
-                <div class="projects-item">
-                    <div class="item1"> <!--HEADER-->
-                        <img id = "logo" src = "Images/folder.png" alt = "Folder" width = "30" height = "30">
-                    </div>
-                    <div class="item2">
-                        <p>API CONSULTS</p>
-                    </div>
-                    <div class="item3">
-                        <p>Simple to do list with local storage</p>
-                    </div>
-                    <div class="item4">
-                        <img id = "web" src = "Images/Webs/todolist.png" alt = "WebToDoList" width = "150" height = "100">
-                    </div>
-                    <div class="item5">
-                        <p>JavaScript 41% | CSS 34% | HTML 25%</p>
-                    </div>
-                    <div class="item6">
-                        <a href = "https://github.com/goloro/ToDoList">VIEW CODE</a>
+                        <a id="projects-code" target="_blank" href = "https://github.com/goloro/ToDoList">VIEW CODE</a>
                     </div>
                 </div>
             </div>
+        </div>
+
+        <!--CONTACT-->
+        <div class="contact">
+            <p id="titulo">.contact( )</p>
         </div>
     </body>
 </html>
