--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     </head>
     <body>
         <!--NAV-->
@@ -92,13 +93,15 @@
                         <p>Simple to do list with local storage</p>
                     </div>
                     <div class="item4">
-                        <img id = "web" src = "Images/Webs/todolist.png" alt = "WebToDoList" width = "150" height = "100">
+                        <a target="_blank" href="https://goloro.github.io/ToDoList/"><img id = "web" src = "Images/Webs/todolist.png" alt = "WebToDoList" width = "150" height = "100"></a>
                     </div>
                     <div class="item5">
-                        <p>JavaScript 41% | CSS 34% | HTML 25%</p>
+                        <button id="JS"></button>
+                        <button id="CSS"></button>
+                        <button id="HTML"></button>
                     </div>
                     <div class="item6">
-                        <a id="projects-code" target="_blank" href = "https://github.com/goloro/ToDoList">VIEW CODE</a>
+                        <a id="projects-code" target="_blank" href = "https://github.com/goloro/ToDoList">View Code</a>
                     </div>
                 </div>
                 <div class="projects-item">
@@ -115,10 +118,12 @@
                         <img id = "web" src = "Images/Webs/todolist.png" alt = "WebToDoList" width = "150" height = "100">
                     </div>
                     <div class="item5">
-                        <p>JavaScript 41% | CSS 34% | HTML 25%</p>
+                        <button id="JS"></button>
+                        <button id="CSS"></button>
+                        <button id="HTML"></button>
                     </div>
                     <div class="item6">
-                        <a id="projects-code" target="_blank" href = "https://github.com/goloro/ToDoList">VIEW CODE</a>
+                        <a id="projects-code" target="_blank" href = "https://github.com/goloro/ToDoList">View Code</a>
                     </div>
                 </div>
             </div>
