--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <!--ABOUT-->
         <div class = "about">
-            <p id = "txt">I'm Web Developer located in Madrid. I love creating good, dynamic and intuitive user experiences.</p>
+            <p id = "txt">I'm a Web Developer located in Madrid. I love creating good, dynamic and intuitive user experiences.</p>
             <p id = "txt">I'm highly motivated and I love researching and learning all about web applications.</p>
         </div>
 
