--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz&display=swap" rel="stylesheet">
     </head>
     <body>
         <!--NAV-->
@@ -39,11 +40,11 @@
             </section>
     
             <aside class = "social">
-                <a target="_blank" href="https://github.com/goloro"><img id = "logo" src = "Images/github_logo.png" alt = "Logo GitHub" width = "30" height = "30"></a>
+                <a target="_blank" href="https://github.com/goloro"><img id = "logogit" src = "Images/github_logo.png" alt = "Logo GitHub" width = "30" height = "30"></a>
                 <br>
-                <a target="_blank" href="https://www.linkedin.com/in/gonzalo-lópez-rodríguez-b919101ba/"><img id = "logo" src = "Images/linkedin_logo.png" alt = "Logo Linkedin" width = "30" height = "30"></a>
+                <a target="_blank" href="https://www.linkedin.com/in/gonzalo-lópez-rodríguez-b919101ba/"><img id = "logolink" src = "Images/linkedin_logo.png" alt = "Logo Linkedin" width = "30" height = "30"></a>
                 <br>
-                <img id = "logo" src = "Images/email_logo.png" alt = "Logo Email" width = "30" height = "25">
+                <img id = "logogmail" src = "Images/email_logo.png" alt = "Logo Email" width = "30" height = "25">
             </aside>
         </div>
 
@@ -96,9 +97,9 @@
                         <a target="_blank" href="https://goloro.github.io/ToDoList/"><img id = "web" src = "Images/Webs/todolist.png" alt = "WebToDoList" width = "150" height = "100"></a>
                     </div>
                     <div class="item5">
-                        <button id="JS1" onmouseover="ONhoverLenguajesJS()" onmouseout="OFFhoverLenguajesJS()"></button>
-                        <button id="CSS1" onmouseover="ONhoverLenguajesCSS()" onmouseout="OFFhoverLenguajesCSS()"></button>
-                        <button id="HTML1" onmouseover="ONhoverLenguajesHTML()" onmouseout="OFFhoverLenguajesHTML()"></button>
+                        <button id="JS1"></button>
+                        <button id="CSS1"></button>
+                        <button id="HTML1"></button>
                     </div>
                     <div class="item6">
                         <a id="projects-code" target="_blank" href = "https://github.com/goloro/ToDoList">View Code</a>
@@ -118,7 +119,7 @@
                         <a target="_blank" href="https://goloro.github.io/ApiConsults/"><img id = "web" src = "Images/Webs/todolist.png" alt = "WebToDoList" width = "150" height = "100"></a>
                     </div>
                     <div class="item5">
-                        <button  id="JS"></button>
+                        <button id="JS"></button>
                         <button id="CSS"></button>
                         <button id="HTML"></button>
                     </div>
@@ -148,12 +149,9 @@
                     </div>
                 </div>
                 <div class="contact-map">
-                    <img id = "logo" src = "Images/mapa-europa.png" alt = "Map" width = "450" height = "300">
+                    <img id = "map" src = "Images/mapa-europa.png" alt = "Map" width = "450" height = "300">
                 </div>
             </div>
         </div>
-        
-        <!--SCRIPT-->
-        <script src = "script.js"></script>
     </body>
 </html>
