--- a/index.html
+++ b/index.html
@@ -21,17 +21,18 @@
         <!--NAV-->
         <nav>
             <!--Logo Personal-->
-            <img id="perslogo" src = "Images/logo_glr_blue.png" alt = "Personal Logo" width = "40" height = "40">
+            <a href="#portada"><img id="perslogo" src = "Images/logo_glr_blue.png" alt = "Personal Logo" width = "40" height = "40"></a>
 
             <!--Botones nav-->
             <div class = "btn-nav">
-                <button>.skills( )</button>
-                <button>.projects( )</button>
-                <button>.contact( )</button>
+                <button><a href="#skills">.skills( )</a></button>
+                <button><a href="#projects">.projects( )</a></button>
+                <button><a href="#contact">.contact( )</a></button>
             </div>
         </nav>
 
         <!--PORTADA-->
+        <div id="portada"></div>
         <div class = "portada">
             <section class = "hi">
                 <p id = "hi1">Hi,</p>
@@ -55,6 +56,7 @@
         </div>
 
         <!--SKILLS-->
+        <div id="skills"></div>
         <div class = "skills">
             <p id="titulo">.skills( )</p>
             <div class="skills-content">
@@ -80,6 +82,7 @@
         </div>
 
         <!--PROJECTS-->
+        <div id="projects"></div>
         <div class = "projects">
             <p id="titulo">.projects( )</p>
             <div class = "projects-content">
@@ -131,6 +134,7 @@
         </div>
 
         <!--CONTACT-->
+        <div id="contact"></div>
         <div class="contact">
             <p id="titulo">.contact( )</p>
             <div class="contact-content">
