--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
             </section>
     
             <aside class = "social">
-                <a target="_blank" href="https://github.com/goloro"><img id = "logogit" src = "Images/github_logo.png" alt = "Logo GitHub" width = "30" height = "30"></a>
-                <br>
-                <a target="_blank" href="https://www.linkedin.com/in/gonzalo-lópez-rodríguez-b919101ba/"><img id = "logolink" src = "Images/linkedin_logo.png" alt = "Logo Linkedin" width = "30" height = "30"></a>
-                <br>
-                <img id = "logogmail" src = "Images/email_logo.png" alt = "Logo Email" width = "30" height = "25">
+                <ul>
+                    <li><a target="_blank" href="https://github.com/goloro"><img id = "logogit" src = "Images/github_logo.png" alt = "Logo GitHub" width = "30" height = "30"></a></li>
+                    <li><a target="_blank" href="https://www.linkedin.com/in/gonzalo-lópez-rodríguez-b919101ba/"><img id = "logolink" src = "Images/linkedin_logo.png" alt = "Logo Linkedin" width = "30" height = "30"></a></li>
+                    <li><img id = "logogmail" src = "Images/email_logo.png" alt = "Logo Email" width = "30" height = "25"></li>
+                </ul>
             </aside>
         </div>
 
