--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
             <!--Botones nav-->
             <div class = "btn-nav">
-                <button><a href="#skills">.skills( )</a></button>
-                <button><a href="#projects">.projects( )</a></button>
-                <button><a href="#contact">.contact( )</a></button>
+                <a href="#skills">.skills( )</a>
+                <a href="#projects">.projects( )</a>
+                <a href="#contact">.contact( )</a>
             </div>
         </nav>
 
@@ -69,13 +69,13 @@
                 <div class="skills-item">
                     <img id = "logo" src = "Images/css_logo.png" alt = "Logo CSS" width = "90" height = "100">
                 </div>
-                <div class="skills-item">
+                <div>
                     <img id = "logo" src = "Images/java_logo.png" alt = "Logo Java" width = "100" height = "100">
                 </div>
-                <div class="skills-item">
+                <div>
                     <img id = "logo" src = "Images/ajax_logo.png" alt = "Logo AJAX" width = "90" height = "100">
                 </div>
-                <div class="skills-item">
+                <div>
                     <img id = "logo" src = "Images/git_logo.png" alt = "Logo Git" width = "100" height = "100">
                 </div>
             </div>
@@ -87,46 +87,46 @@
             <p id="titulo">.projects( )</p>
             <div class = "projects-content">
                 <div class="projects-item">
-                    <div class="item1"> <!--HEADER-->
+                    <div class="folder"> <!--HEADER-->
                         <img id = "logo" src = "Images/folder.png" alt = "Folder" width = "30" height = "30">
                     </div>
-                    <div class="item2">
+                    <div class="titulo">
                         <p>TO DO LIST</p>
                     </div>
-                    <div class="item3">
+                    <div class="descrip">
                         <p>Simple to do list with local storage</p>
                     </div>
-                    <div class="item4">
+                    <div class="web">
                         <a target="_blank" href="https://goloro.github.io/ToDoList/"><img id = "web" src = "Images/Webs/todolist.png" alt = "WebToDoList" width = "150" height = "100"></a>
                     </div>
-                    <div class="item5">
+                    <div class="lenguajes">
                         <button id="JS1"></button>
                         <button id="CSS1"></button>
                         <button id="HTML1"></button>
                     </div>
-                    <div class="item6">
+                    <div class="code">
                         <a id="projects-code" target="_blank" href = "https://github.com/goloro/ToDoList">View Code</a>
                     </div>
                 </div>
                 <div class="projects-item">
-                    <div class="item1"> <!--HEADER-->
+                    <div class="folder"> <!--HEADER-->
                         <img id = "logo" src = "Images/folder.png" alt = "Folder" width = "30" height = "30">
                     </div>
-                    <div class="item2">
+                    <div class="titulo">
                         <p>API CONSULTS</p>
                     </div>
-                    <div class="item3">
+                    <div class="descrip">
                         <p>API consults using AJAX, Fetch and axios</p>
                     </div>
-                    <div class="item4">
+                    <div class="web">
                         <a target="_blank" href="https://goloro.github.io/ApiConsults/"><img id = "web" src = "Images/Webs/todolist.png" alt = "WebToDoList" width = "150" height = "100"></a>
                     </div>
-                    <div class="item5">
+                    <div class="lenguajes">
                         <button id="JS"></button>
                         <button id="CSS"></button>
                         <button id="HTML"></button>
                     </div>
-                    <div class="item6">
+                    <div class="code">
                         <a id="projects-code" target="_blank" href = "https://github.com/goloro/ApiConsults">View Code</a>
                     </div>
                 </div>
