--- a/index.html
+++ b/index.html
@@ -7,155 +7,87 @@
         <title>Gonzalo López</title>
 
         <link rel = "stylesheet" href = "style.css">
-        <!--Fuentes-->
-        <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@900&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@500&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz&display=swap" rel="stylesheet">
+
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Saira:wght@500&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
-        <!--NAV-->
-        <nav>
-            <!--Logo Personal-->
-            <a href="#portada"><img id="perslogo" src = "Images/logo_glr_blue.png" alt = "Personal Logo" width = "40" height = "40"></a>
+        <!-- CONTENT -->
+        <div class="content">
+            <div class="portada">
+                <div class="item">
+                    <div class="cabeceraItem">
+                        <img src="Images/folder.png" width="30" height="30">
+                        <h3 id="Titulo">To Do List</h3>
+                        <a id="gitHub" href="https://github.com/goloro/ToDoList" target="blank"><img src="Images/github_logo_blue.png" width="25" height="25"></a>
+                    </div>
+                    <a id="aWebImage" href="https://goloro.github.io/ToDoList/"><img id="webImage" src="Images/Webs/todolist.png"></a>
+                    <div class="lenguajesItem">
+                        <p>JavaScrip</p>
+                        <p>HTML</p>
+                        <p>CSS</p>
+                    </div>
+                </div>
 
-            <!--Botones nav-->
-            <div class = "btn-nav">
-                <a href="#skills">.skills( )</a>
-                <a href="#projects">.projects( )</a>
-                <a href="#contact">.contact( )</a>
-            </div>
-        </nav>
+                <div class="item">
+                    <div class="cabeceraItem">
+                        <img src="Images/folder.png" width="30" height="30">
+                        <h3 id="Titulo">United Motorsports</h3>
+                        <a id="gitHub" href="https://github.com/goloro/UnitedMotorsports" target="blank"><img src="Images/github_logo_blue.png" width="25" height="25"></a>
+                    </div>
+                    <a id="aWebImage" href="https://unitedmotorsports.herokuapp.com"><img id="webImage" src="Images/Webs/unitedMotorsports.png"></a>
+                    <div class="lenguajesItem">
+                        <p>JavaScrip</p>
+                        <p>HTML</p>
+                        <p>CSS</p>
+                    </div>
+                </div>
 
-        <!--PORTADA-->
-        <div id="portada"></div>
-        <div class = "portada">
-            <section class = "hi">
-                <p id = "hi1">Hi,</p>
-                <p id = "hi1">I'm Gonzalo</p>
-                <p id = "hi2">Web Developer</p>
-            </section>
-    
-            <aside class = "social">
-                <ul>
-                    <li><a target="_blank" href="https://github.com/goloro"><img id = "logogit" src = "Images/github_logo.png" alt = "Logo GitHub" width = "30" height = "30"></a></li>
-                    <li><a target="_blank" href="https://www.linkedin.com/in/gonzalo-lópez-rodríguez-b919101ba/"><img id = "logolink" src = "Images/linkedin_logo.png" alt = "Logo Linkedin" width = "30" height = "30"></a></li>
-                    <li><img id = "logogmail" src = "Images/email_logo.png" alt = "Logo Email" width = "30" height = "25"></li>
-                </ul>
-            </aside>
-        </div>
+                <div class="item">
+                    <div class="cabeceraItem">
+                        <img src="Images/folder.png" width="30" height="30">
+                        <h3 id="Titulo">API Consults</h3>
+                        <a id="gitHub" href="https://github.com/goloro/ApiConsults" target="blank"><img src="Images/github_logo_blue.png" width="25" height="25"></a>
+                    </div>
+                    <a id="aWebImage" href="https://unitedmotorsports.herokuapp.com"><img id="webImage" src="Images/Webs/default.png"></a>
+                    <div class="lenguajesItem">
+                        <p>JavaScrip</p>
+                        <p>HTML</p>
+                        <p>CSS</p>
+                    </div>
+                </div>
 
-        <!--ABOUT-->
-        <div class = "about">
-            <p id = "txt">I'm a Web Developer located in Madrid. I love creating good, dynamic and intuitive user experiences.</p>
-            <p id = "txt">I'm highly motivated and I love researching and learning all about web applications.</p>
-        </div>
+                <!-- <div class="item">
+                    <div class="cabeceraItem">
+                        <img src="Images/folder.png" width="30" height="30">
+                        <h3 id="Titulo">United Motorsports</h3>
+                        <img src="Images/github_logo_blue.png" width="25" height="25">
+                    </div>
+                    <img id="webImage" src="Images/Webs/default.png">
+                    <div class="lenguajesItem">
+                        <p>JavaScrip</p>
+                        <p>HTML</p>
+                        <p>CSS</p>
+                    </div>
+                </div> -->
 
-        <!--SKILLS-->
-        <div id="skills"></div>
-        <div class = "skills">
-            <p id="titulo">.skills( )</p>
-            <div class="skills-content">
-                <div class="skills-item">
-                    <img id = "logo" src = "Images/js_logo.png" alt = "Logo Javascript" width = "100" height = "100">
-                </div>
-                <div class="skills-item">
-                    <img id = "logo" src = "Images/html_logo.png" alt = "Logo HTML" width = "90" height = "100">
-                </div>
-                <div class="skills-item">
-                    <img id = "logo" src = "Images/css_logo.png" alt = "Logo CSS" width = "90" height = "100">
-                </div>
-                <div>
-                    <img id = "logo" src = "Images/java_logo.png" alt = "Logo Java" width = "100" height = "100">
-                </div>
-                <div>
-                    <img id = "logo" src = "Images/ajax_logo.png" alt = "Logo AJAX" width = "90" height = "100">
-                </div>
-                <div>
-                    <img id = "logo" src = "Images/git_logo.png" alt = "Logo Git" width = "100" height = "100">
-                </div>
-            </div>
-        </div>
-
-        <!--PROJECTS-->
-        <div id="projects"></div>
-        <div class = "projects">
-            <p id="titulo">.projects( )</p>
-            <div class = "projects-content">
-                <div class="projects-item">
-                    <div class="folder"> <!--HEADER-->
-                        <img id = "logo" src = "Images/folder.png" alt = "Folder" width = "30" height = "30">
-                    </div>
-                    <div class="titulo">
-                        <p>TO DO LIST</p>
-                    </div>
-                    <div class="descrip">
-                        <p>Simple to do list with local storage</p>
-                    </div>
-                    <div class="web">
-                        <a target="_blank" href="https://goloro.github.io/ToDoList/"><img id = "web" src = "Images/Webs/todolist.png" alt = "WebToDoList" width = "150" height = "100"></a>
-                    </div>
-                    <div class="lenguajes">
-                        <button id="JS1"></button>
-                        <button id="CSS1"></button>
-                        <button id="HTML1"></button>
-                    </div>
-                    <div class="code">
-                        <a id="projects-code" target="_blank" href = "https://github.com/goloro/ToDoList">View Code</a>
-                    </div>
-                </div>
-                <div class="projects-item">
-                    <div class="folder"> <!--HEADER-->
-                        <img id = "logo" src = "Images/folder.png" alt = "Folder" width = "30" height = "30">
-                    </div>
-                    <div class="titulo">
-                        <p>API CONSULTS</p>
-                    </div>
-                    <div class="descrip">
-                        <p>API consults using AJAX, Fetch and axios</p>
-                    </div>
-                    <div class="web">
-                        <a target="_blank" href="https://goloro.github.io/ApiConsults/"><img id = "web" src = "Images/Webs/todolist.png" alt = "WebToDoList" width = "150" height = "100"></a>
-                    </div>
-                    <div class="lenguajes">
-                        <button id="JS"></button>
-                        <button id="CSS"></button>
-                        <button id="HTML"></button>
-                    </div>
-                    <div class="code">
-                        <a id="projects-code" target="_blank" href = "https://github.com/goloro/ApiConsults">View Code</a>
-                    </div>
-                </div>
             </div>
         </div>
-
-        <!--CONTACT-->
-        <div id="contact"></div>
-        <div class="contact">
-            <p id="titulo">.contact( )</p>
-            <div class="contact-content">
-                <div>
-                    <div class="contact-social1">
-                        <a target="_blank" href="https://github.com/goloro"><img id = "logo" src = "Images/github_logo_blue.png" alt = "Logo GitHub" width = "50" height = "50"></a>
-                        <p id="contact-p">goloro</p>
-                    </div>
-                    <div class="contact-social">
-                        <a target="_blank" href="https://www.linkedin.com/in/gonzalo-lópez-rodríguez-b919101ba/"><img id = "logo" src = "Images/linkedin_logo_blue.png" alt = "Logo Linkedin" width = "50" height = "50"></a>
-                        <p id="contact-p">Gonzalo López Rodríguez</p>
-                    </div>
-                    <div class="contact-social">
-                        <img id = "logo" src = "Images/email_logo_blue.png" alt = "Logo Email" width = "50" height = "45">
-                        <p id="contact-p2">goloro02@gmail.com</p>
-                    </div>
-                </div>
-                <div class="contact-map">
-                    <img id = "map" src = "Images/mapa-europa.png" alt = "Map" width = "450" height = "300">
-                </div>
+        <!-- BARRA LATERAL -->
+        <div class="barraLateral">
+            <a id="LogoPersRed" href="index.html"><img src="Images/LogoPersRedondo.png" width="200" height="200"></a>
+            <div class="nombre">
+                <h1>GONZALO</h1>
+                <h1>LÓPEZ</h1>
+                <h4>Web Developer</h4>
             </div>
+            <div class="redesBL">
+                <a><img src="Images/github_logo_blue.png" width="30" height="30"></a>
+                <a><img src="Images/linkedin_logo_blue.png" width="30" height="30"></a>
+                <a><img src="Images/email_logo_blue.png" width="30" height="25"></a>
+            </div>
+            <hr id="lineaBL">
         </div>
     </body>
 </html>
