--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
         <link rel = "stylesheet" href = "style.css">
 
+        <link rel="shortcut icon" href="Images/logo_glr_blue.png">
+
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Saira:wght@500&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
@@ -83,9 +85,9 @@
                 <h4>Web Developer</h4>
             </div>
             <div class="redesBL">
-                <a><img src="Images/github_logo_blue.png" width="30" height="30"></a>
-                <a><img src="Images/linkedin_logo_blue.png" width="30" height="30"></a>
-                <a><img src="Images/email_logo_blue.png" width="30" height="25"></a>
+                <a><img src="Images/github_logo_black.png" width="30" height="30"></a>
+                <a><img src="Images/linkedin_logo_black.png" width="30" height="30"></a>
+                <a><img src="Images/email_logo_black.png" width="30" height="25"></a>
             </div>
             <hr id="lineaBL">
         </div>
