--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Saira:wght@500&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@500&display=swap" rel="stylesheet">
     </head>
     <body>
         <!-- CONTENT -->
@@ -85,11 +86,31 @@
                 <h4>Web Developer</h4>
             </div>
             <div class="redesBL">
-                <a><img src="Images/github_logo_black.png" width="30" height="30"></a>
-                <a><img src="Images/linkedin_logo_black.png" width="30" height="30"></a>
+                <a href="https://github.com/goloro"><img src="Images/github_logo_black.png" width="30" height="30"></a>
+                <a href="https://www.linkedin.com/in/gonzalo-l%C3%B3pez-rodr%C3%ADguez-b919101ba/"><img src="Images/linkedin_logo_black.png" width="30" height="30"></a>
                 <a><img src="Images/email_logo_black.png" width="30" height="25"></a>
             </div>
             <hr id="lineaBL">
+            <div class="menuBL">
+                <a href="#projects">
+                    <div class="itemMenuBL">
+                        <img src="Images/folder_black.png" width="30" height="30">
+                        <p>SKILLS</p>
+                    </div>
+                </a>
+                <a href="#projects">
+                    <div class="itemMenuBL">
+                        <img src="Images/folder_black.png" width="30" height="30">
+                        <p>PROJECTS</p>
+                    </div>
+                </a>
+                <a href="#projects">
+                    <div class="itemMenuBL">
+                        <img src="Images/folder_black.png" width="30" height="30">
+                        <p>CONTACT ME</p>
+                    </div>
+                </a>
+            </div>
         </div>
     </body>
 </html>
