--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>Gonzalo López</title>
 
         <link rel = "stylesheet" href = "style.css">
+        <link rel = "stylesheet" href = "style-responsive.css">
 
         <link rel="shortcut icon" href="Images/logo_glr_blue.png">
 
@@ -14,10 +15,17 @@
         <link href="https://fonts.googleapis.com/css2?family=Saira:wght@500&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@500&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@500&display=swap" rel="stylesheet">
     </head>
     <body>
+        <!-- MENU RESPONSIVE -->
+        <!-- <div class="menuResponsive">
+            <img src="Images/LogoPersRedondo.png">
+        </div> -->
         <!-- CONTENT -->
         <div class="content">
+            <h1 id="tituloPortada">MIS PROYECTOS</h1>
             <div class="portada">
                 <div class="item">
                     <div class="cabeceraItem">
