--- a/index.html
+++ b/index.html
@@ -17,15 +17,20 @@
         <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@500&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@500&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@600&display=swap" rel="stylesheet">
     </head>
     <body>
         <!-- MENU RESPONSIVE -->
-        <!-- <div class="menuResponsive">
-            <img src="Images/LogoPersRedondo.png">
-        </div> -->
-        <!-- CONTENT -->
+        <div class="menuResponsive">
+            <img id="LogoPersRedRes" src="Images/LogoPersRedondo.png" width="40" height="40">
+            <p id="nombreRes">Gonzalo López</p>
+            <img id="BarraMenuRes"src="Images/menu.svg" width="35" height="35">
+        </div>
+
+        <div class="subBody">
+            <!-- CONTENT -->
         <div class="content">
-            <h1 id="tituloPortada">MIS PROYECTOS</h1>
+            <h1 id="tituloPortada">PROYECTOS RECIENTES</h1>
             <div class="portada">
                 <div class="item">
                     <div class="cabeceraItem">
@@ -119,6 +124,7 @@
                     </div>
                 </a>
             </div>
+        </div>
         </div>
     </body>
 </html>
